force-app/main/default/objects/Credit_Card_Auth__c/Credit_Card_Auth__c.object-meta.xml
<CustomObject>
    <label>Credit Card Auth</label>
    <nameField>
        <displayFormat>CCA-{00000}</displayFormat>
        <label>Credit Card Auth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Card Auths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>