force-app/main/default/objects/Credit_Card_Auth__c/fields/CCV__c.field-meta.xml
<CustomField>
    <fullName>CCV__c</fullName>
    <inlineHelpText>3-4 digit CCV/CVN for example: 1234</inlineHelpText>
    <label>CCV</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>