force-app/main/default/objects/Credit_Card_Auth__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Contains a list of currency codes</description>
    <inlineHelpText>Select the desired currency for payment</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>