force-app/main/default/objects/Credit_Card_Auth__c/fields/Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date__c</fullName>
    <inlineHelpText>4 digit date. Eg. May 2017 would be: 0517</inlineHelpText>
    <label>Exp Date(MMYY)</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>