force-app/main/default/objects/Credit_Card_Auth__c/fields/Name_on_card__c.field-meta.xml
<CustomField>
    <fullName>Name_on_card__c</fullName>
    <label>Name on card</label>
    <type>TextArea</type>
</CustomField>