force-app/main/default/objects/Credit_Card_Auth__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Transaction type is used as part of the bpoint payment request and corresponds to either Telephone, Internet or Mail order to the issuer.</description>
    <inlineHelpText>Defines a type for the transaction.</inlineHelpText>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Type</valueSetName>
    </valueSet>
</CustomField>